# blocklog-python-sdk

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  async.md  changelog.md  concepts.md  configuration.md  decisions.md  decorators.md  error-handling.md  examples.md  index.md  installation.md  integrations.md  migration.md  performance.md  production.md  quickstart.md  tracing.md  troubleshooting.md
examples/: 02_stock_trading_agent.py
node/: index.ts
python/: __init__.py  blocklog_sdk.py  pyproject.toml
python/examples/: langchain_alert_demo.py
python/src/blocklog/: __init__.py  async_client.py  client.py  config.py
python/src/blocklog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/blocklog/batching/: buffer.py
python/src/blocklog/context/: decorators.py  managers.py  vars.py
python/src/blocklog/integrations/: langchain.py  langgraph.py  openai_agents.py
python/src/blocklog/middleware/: hooks.py
python/src/blocklog/models/: events.py  responses.py
python/src/blocklog/signing/: canonical.py  ed25519.py
python/src/blocklog/transport/: auth.py  httpx_async.py  httpx_sync.py  retry.py
python/tests/: test_context.py
src/blocklog/: __init__.py  _init_fn.py  client.py  config.py  exceptions.py  verify.py
src/blocklog/api/: approval.py  decisions.py  verify.py
src/blocklog/context/: managers.py
src/blocklog/decorators/: agent.py  tool.py
src/blocklog/integrations/: langchain.py  langgraph.py  litellm.py  openai_agents.py
src/blocklog/managers/: decision.py
src/blocklog/models/: events.py
src/blocklog/signing/: ed25519.py
src/blocklog/transport/: httpx_async.py  httpx_sync.py  retry.py
tests/: test_client.py  test_config.py  test_decorators.py  test_errors_and_health.py  test_public_api.py  test_transport.py
